syntax = "proto2";

package sf.solana.spl.v1;

message Output {
  repeated SplTokenMeta data = 1;
}

message SplTokenMeta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required uint64 block_slot = 4;
  required uint32 instruction_index = 5;
  required bool is_inner_instruction = 6;
  required uint32 inner_instruction_index = 7;
  required string instruction_type = 8;
  required Accounts input_accounts = 9;
  required Arg args = 10;
  required string outer_program = 11;
  optional string signer = 12;
  optional uint32 tx_index = 13;
  optional uint64 fee = 14;
  optional uint32 num_signers = 15;
}

message Accounts {
  optional string mint = 1;
  optional string rent_sysvar = 2;
  optional string account = 3;
  optional string owner = 4;
  repeated string signer_accounts = 5;
  optional string source = 6;
  optional string destination = 7;
  optional string delegate = 8;
  optional string authority = 9;
  optional string payer = 10;
  optional string fund_relocation_sys_program = 11;
  optional string funding_account = 12;
  optional string mint_funding_sys_program = 13;
  optional string destination_owner = 14;
}

message Arg {
  optional uint64 amount = 1;
  optional string authority_type = 2;
  optional string freeze_authority = 3;
  optional string mint_authority = 4;
  optional string new_authority = 5;
  optional int32 new_authority_option = 6;
  optional string owner = 7;
  optional int32 decimals = 8;
  optional int32 extension_type = 9;
  optional double ui_amount = 10;
  optional int32 status = 11;
}